[package]
name = "l476-embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.5.0", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "memory-x", "unstable-pac", "time-driver-any", "stm32l476rg"] }
embassy-time = { version = "0.3.0", features = ["defmt-timestamp-uptime"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
